# apl_converter

./: .gitignore  Cargo.toml  Dockerfile  README.md  azure-pipelines.yml  run_docker_image.sh
.github/workflows/: github-actions-apl-parser.yml  github-actions-io-tester.yml  github-actions-merge-development.yml
APL_examples/: .apl.history  hello_world.apl  matrix.apl  new_matrix.apl  new_matrix2.apl  output.txt
IOtester/: IOtester.sh
IOtester/apl_input/: matrix2d.apl
IOtester/out_folder/: matrix.output
IOtester/py_input/: matrix.py  matrix2d.py
src/: ast.rs  compare_ast.rs  lib.rs  main.rs  parser_lib.rs
src/generator/: ast.rs  compare_ast.rs  display_ast.rs  generator_lib.rs  main.rs  mod.rs
src/parser/: main.rs  parser_lib.rs
